# digital_fte-Hackathon0-giaic

./: readme.md
AI_Employee_Vault/: .gitignore  Company_Handbook.md  Dashboard.md  README.md  agent_loop.py  (+2 more)
SilverTier/: .env.template  Company_Handbook.md  Dashboard.md  README.md  agent_loop.py  check_now.py  mcp_config.json  orchestrator.py  prompts.md  pyproject.toml  send_reply.py
SilverTier/.obsidian/: workspace.json
SilverTier/Done/: FILE_test_task.txt.md
SilverTier/Inbox/: EMAIL_20260221_131744.md
SilverTier/PHR/: RECORD_2026120922_test_task.txt.md  RECORD_2026124356_test_task.txt.md
SilverTier/Plans/: PLAN_EMAIL_20260221_131744.md  PLAN_test_task.txt.md
SilverTier/Sent/: EMAIL_REPLY_20260221_131744.md
SilverTier/Silver_Tier_FTE/: README.md  agent.py  mcp_config.json  orchestrator.py  package-lock.json  package.json  requirements.txt
SilverTier/Silver_Tier_FTE/Drafts/: LINKEDIN_task_demo_welcome_email.md
SilverTier/Silver_Tier_FTE/Inbox/: task_demo_welcome_email.md  task_demo_whatsapp_promo.md
SilverTier/Silver_Tier_FTE/Memory/: Company_Handbook.md  Dashboard.md  LinkedIn_SOP.md
SilverTier/Silver_Tier_FTE/Sent/: EMAIL_sarfarazunar751.md  task_demo_welcome_email.md
SilverTier/Silver_Tier_FTE/tools/: gmail_sender.py  linkedin_poster.py  whatsapp_sender.py
SilverTier/Skills/: Gmail_Watcher.md  HITL_Workflow.md  LinkedIn_Poster.md  MCP_Integration.md
SilverTier/Tools/: linkedin_poster.py  setup_scheduler.py
SilverTier/Watchers/: gmail_watcher.py  linkedin_watcher.py  whatsapp_watcher.py
SilverTier/mcp_server/: email_server.py
(+3 files in other folders)
